--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 wp-config.php
 .htaccess
 .DS_Store   
-wp-content/uploads/elementor/css/post-39.css
+wp-content/uploads/
 wp-content/uploads/elementor/css/post-558.css
 wp-content/uploads/elementor/css/post-6.css
